--- a/main.html
+++ b/main.html
@@ -5,11 +5,82 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<title>HTML Assignment 3</title>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>HTML Assignment #3</h1>
+	<table id="table-1" class="middle">
+		<tr>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td  id="t13">right</td>
+		</tr>
+		<tr class="center">
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13">right</td>
+		</tr>
+		<tr class="right">
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13">right</td>
+		</tr>
+	</table>  <br> <br>
+
+	<!-- Table 2 -->
+	<table id="table-2" class="middle">
+		<tr>
+			<td id="t21" colspan="6"></td>
+		</tr>
+		<tr>
+			<td rowspan="4"></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td rowspan="2" colspan="3"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td colspan="6"></td>
+		</tr>
+		
+	</table>  <br> <br>
+
+	<!-- Table 3 -->
+	<table id="table-3" class="middle">
+		<tr id="firstrow">
+			<td></td>
+			</tr>
+		<tr>
+			<td id="t-image">
+				<img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb
+">
+			</td>
+		</tr>
+		<tr id="lastrow">
+			<td></td>
+		</tr>
+	</table>
+	
 
 </body>
 
