--- a/main.html
+++ b/main.html
@@ -3,30 +3,31 @@
 <html>
 
 <head>
+	<title>HTML Assignment 3</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
-	<title>HTML Assignment 3</title>
+
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<h1>HTML Assignment #3</h1>
+	<h1 align="center">HTML Assignment #3</h1>
 	<table id="table-1" class="middle">
 		<tr>
 			<td id="t11">left</td>
 			<td id="t12">center</td>
-			<td  id="t13">right</td>
+			<td  id="t13" class="right">right</td>
 		</tr>
 		<tr class="center">
-			<td id="t11">left</td>
-			<td id="t12">center</td>
-			<td id="t13">right</td>
+			<td>left</td>
+			<td>center</td>
+			<td class="right">right</td>
 		</tr>
-		<tr class="right">
-			<td id="t11">left</td>
-			<td id="t12">center</td>
-			<td id="t13">right</td>
+		<tr>
+			<td>left</td>
+			<td>center</td>
+			<td class="right">right</td>
 		</tr>
 	</table>  <br> <br>
 
@@ -67,7 +68,7 @@
 
 	<!-- Table 3 -->
 	<table id="table-3" class="middle">
-		<tr id="firstrow">
+		<tr id="green">
 			<td></td>
 			</tr>
 		<tr>
@@ -76,7 +77,7 @@
 ">
 			</td>
 		</tr>
-		<tr id="lastrow">
+		<tr id="blue">
 			<td></td>
 		</tr>
 	</table>
